<resources>
    <string name="app_name">TodoListApp</string>
    <string name="enter_your_todo">Enter your todo</string>
    <string name="add">Add</string>
    <string name="dummy_todo">Dummy Todo</string>
    <string name="show_notification">Show Notification</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="dont_have_an_account_register_now">Dont Have an Account?? Register Now</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account ?? Login</string>
    <string name="enter_notificaiton_title">Enter notificaiton Title</string>
    <string name="enter_notificaiton_message">Enter notificaiton Message</string>
    <string name="send_notification">Send Notification</string>
    <string name="token">Token</string>
</resources>